[tool.poetry]
name = "MusicForYourMood"
version = "0.1.0"
description = "Une application web pour générer des playlists Spotify en fonction de l'humeur"
authors = ["Votre Nom <votre@email.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
spotipy = "^2.19.0"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"